Closed Bug 626866 Opened 15 years ago Closed 14 years ago

Fennec doesn't support IPv6 on Android

Categories

(NSPR :: NSPR, defect)

ARM
Android
defect
Not set
normal

Tracking

(fennec2.0b5+)

VERIFIED FIXED
Tracking Status
fennec 2.0b5+ ---

People

(Reporter: tarend, Assigned: wtc)

References

()

Details

Attachments

(1 file, 1 obsolete file)

User C. Byrne reports (thanks!): Issue: "[Firefox for Mobile]...does not load web pages using ipv6. T-Mobile USA has an ipv6 beta and chrome works" Expected: Firefox for Mobile should be compatible with IPv6 I found this link that gives hints on how to get into the T-Mobile Trial: http://forums.t-mobile.com/t5/Nokia/T-Mobile-IPv6-Friendly-User-Trial/m-p/465928
tcpdump shows that the browser is only requesting IPv4 records from DNS. IPv6 literal URLs (e.g., http://[2001:4860:8004::/68]/ don't work.
Summary: Check Compatibility with IPv6 → Fennec doesn't support IPv6 on Android
tarend: I am very familiar with the IPv6 code in Mozilla, but I am not familiar with Android development. If you work in Mountain View, I'll be happy to come over to work with you. This should take only one afternoon.
OS: Android → All
OS: All → Android
Attached patch Reference NSPR patch (obsolete) — Splinter Review
I generated this patch by code inspection. It is just for reference. The changes in this patch may be wrong, but the patch points out the places that may need changing.
Attached patch Proposed patchSplinter Review
Brad, please test this patch on Android. You just need to verify that it compiles and networking still works over IPv4, if you don't have access to an IPv6 network. I browsed the Android "bionic" libc source code at http://android.git.kernel.org/?p=platform/bionic.git;a=tree to determine which IPv6-related functions are available. This patch should be able to enable IPv6 for NSPR on Android. Only the _linux.h changes are necessary. The prlink.c and prnetdb.c changes are just code cleanups.
Attachment #506872 - Attachment is obsolete: true
Attachment #507317 - Flags: review?(blassey.bugs)
Attachment #507317 - Flags: review?(blassey.bugs) → review+
Brad, if you successfully built this and would like to test IPv6, perhaps you could attach or send me the resulting apk, so I can confirm that it works on my IPv6-only device?
(In reply to comment #6) > Brad, if you successfully built this and would like to test IPv6, perhaps you > could attach or send me the resulting apk, so I can confirm that it works on my > IPv6-only device? That would be great, here you go http://lassey.us/fennec-ipv6.apk
The build works great. Before I couldn't connect to anything at all, but now everything seems to work fine. Thanks for doing this. It would be nice to set the AI_ADDRCONFIG flag on getaddrinfo as well (it's implemented in android), but that can be another patch. How do we get this into a release?
Thanks for reviewing and testing my patch. I've just checked this in to NSPR. Then we need to update the the NSPR in Mozilla, which should occur within a month, well in advance of the IPv6 Day event on June 8, 2011. We will add AI_ADDRCONFIG in bug 614526. Patch checked in on the NSPR trunk (NSPR 4.8.8). Checking in include/md/_linux.h; /cvsroot/mozilla/nsprpub/pr/include/md/_linux.h,v <-- _linux.h new revision: 3.57; previous revision: 3.56 done Checking in src/linking/prlink.c; /cvsroot/mozilla/nsprpub/pr/src/linking/prlink.c,v <-- prlink.c new revision: 3.110; previous revision: 3.109 done Checking in src/misc/prnetdb.c; /cvsroot/mozilla/nsprpub/pr/src/misc/prnetdb.c,v <-- prnetdb.c new revision: 3.63; previous revision: 3.62 done
Assignee: nobody → wtc
Status: NEW → RESOLVED
Closed: 15 years ago
Component: General → NSPR
Product: Fennec → NSPR
QA Contact: general → nspr
Resolution: --- → FIXED
Target Milestone: --- → 4.8.8
Version: Trunk → other
Nominating for blocking-fennec, just to make sure that NSPR will get tagged/used by Fennec/Firefox before FF4.
tracking-fennec: --- → ?
b5+ since I think we need beta coverage
tracking-fennec: ? → 2.0b5+
I just downloaded and installed Fennec/4.0b5 on my Nexus S but IPv6 doesn't work. Did this just miss the release or is there another bug?
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
its not in beta 5, but it will be in the RC
Status: REOPENED → RESOLVED
Closed: 15 years ago14 years ago
Resolution: --- → FIXED
I can confirm that IPv6 is now working in the Firefox RC available from the market (rv:2.1 Gecko/20110318 Firefox/4.0b13 Fennec/4.0) I tested ipv6.google.com over wifi, and sixxs.org does show an ipv6 address.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: