bug 626866 - Fennec doesn't support IPv6 on Android r=blassey a=blocking-fennec